# SS

.github/workflows/: build.yml
SS/: jsconfig.json  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.js
SS/.github/workflows/: build.yml
SS/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
SS/src-tauri/capabilities/: default.json
SS/src-tauri/src/: lib.rs  license.rs  main.rs  subtitle_renderer.rs
SS/src/lib/: types.ts
SS/src/lib/components/: Editor.svelte  Queue.svelte  SegmentInspector.svelte  SegmentList.svelte  TemplatePanel.svelte  TestSegments.svelte  WordTimeline.svelte
SS/src/lib/components/editor/: CaptionsPanel.svelte  CustomizePanel.svelte  EditorSidebar.svelte  EditorTopbar.svelte  StylesPanel.svelte  VideoPanel.svelte  VideoPlayer.svelte
SS/src/lib/components/editor/customize/: AnimationSection.svelte  LayoutSection.svelte  TextSection.svelte  WordHighlightSection.svelte
SS/src/lib/stores/: editor.ts  queue.ts  templates.ts
SS/src/lib/utils/: ass.ts  renderAdvanced.ts
SS/src/routes/: +page.svelte  SubtitleEditor.svelte
