[package]
name = "ss"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "ss_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Canvas rendering for subtitle backgrounds
tiny-skia = "0.12.0"
ab_glyph = { version = "0.2.32", features = ["libm"] }
unicode-segmentation = "1.13.2"

[package.metadata.tauri.bundle]
resources = [
    "binaries/ffmpeg",
    "../whisper.cpp/build/bin/whisper-cli",
    "../whisper.cpp/models/ggml-base.bin"
]